# rs_command_line_worker

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
docker/debian/: Dockerfile
docker/ubuntu/: Dockerfile
examples/: ls.json  multiple_sources.json  requirements.json  whoami.json
src/: main.rs  message.rs
