[package]
name = "command_line_worker"
version = "0.1.5"
authors = [
  "Valentin Noel <valentin.noel@media-io.com>",
  "Marc-Antoine Arnaud <maarnaud@media-io.com>"
]
edition = "2018"

[dependencies]
mcai_worker_sdk = "0.11.0-beta"
schemars = "0.7.6"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"

[build-dependencies]
built = "0.4"
